--- a/templates/structure.html
+++ b/templates/structure.html
@@ -1,34 +1,32 @@
-<html>
 <header class="bar bar-nav">
-      <link rel="stylesheet" type="text/css" href="../style/style.css">
-      <link rel="stylesheet" type="text/css" href="../style/style.scss">
-
-      <h1 class="title">In Evidenza</h1>
+  <a class="icon icon-left-nav pull-left .displaynone"></a>
+  <h1 class="title">{{title}}</h1>
 </header>
-<body class= "bar bar-nav">
-<nav  class="bar bar-tab">
-  <a class="tab-item active" id="nav1">
-    Home
+
+<div id="content" class="content">
+</div>
+
+<nav class="bar bar-tab">
+  <a class="tab-item" href="#">
+    <span class="icon icon-home"></span>
+    <span class="tab-label">Home</span>
   </a>
-  <a class="tab-item" id="nav2">
-    Spotlight
+  <a class="tab-item" href="#">
+    <span class="icon icon-star-filled"></span>
+    <span class="tab-label">Spotlight</span>
   </a>
-  <a class="tab-item active" id="nav3">
-    Categorie
+  <a class="tab-item" href="#">
+    <span class="icon icon icon-list"></span>
+    <span class="tab-label">Categorie</span>
   </a>
-  <a class="tab-item active" id="nav4">
-    Market
+  <a class="tab-item" href="#">
+    <span class="icon icon-pages"></span> 
+    <span class="tab-label">Market</span>
   </a>
-  <a class="tab-item active" id="nav5">
-    Ricerca
+  <a class="tab-item" href="#">
+    <span class="icon icon-search"></span>
+    <span class="tab-label">Ricerca</span>
   </a>
 </nav>
 
-<!-- <nav id="navigation">
-    <div id="nav1" class="i-4">nav 1</div>
-    <div id="nav2" class="i-8">nav 2</div>
-</nav> -->
-<div id="content" class="content">
-</div>
-</body>
-</html>
+<!-- mettendo active alle classi diventano illuminate -->
