--- a/templates/structure.html
+++ b/templates/structure.html
@@ -1,3 +1,4 @@
+<body>
 <header class="bar bar-nav">
   <a class="icon icon-left-nav pull-left .displaynone"></a>
   <h1 class="title">{{title}}</h1>
