--- a/templates/Home.html
+++ b/templates/Home.html
@@ -1,29 +1,16 @@
 <ul class="table-view">
   <li class="table-view-cell media">
     <a class="navigate-right float-left">
-      <img class="media-object pull-left" src="">
+      <img class="media-object pull-left" src={{prodottoimg}}>
       <div class="media-body">
-        Item 1
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore. Lorem ipsum dolor sit amet.</p>
+        <p>{{prodottonome}}</p>
+        <p>{{prodottodescr}}</p>
+        <p class="supermercato">{{supermercatonome}}</p>
+        <p class="prezzo">{{prodottoprezzo}}</p>
       </div>
     </a>
   </li>
-  <li class="table-view-cell media">
-    <a class="navigate-right float-right">
-      <img class="media-object pull-left" src="http://placehold.it/42x42">
-      <div class="media-body">
-        Item 1
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore. Lorem ipsum dolor sit amet.</p>
-      </div>
-    </a>
-  </li>
-  <li class="table-view-cell media">
-    <a class="navigate-right float-left">
-      <img class="media-object pull-left" src="http://placehold.it/42x42">
-      <div class="media-body">
-        Item 1
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore. Lorem ipsum dolor sit amet.</p>
-      </div>
-    </a>
-  </li>
+  
+  <!-- riempito iterativamente con gli altri risultati -->
+  
 </ul>
