--- a/templates/Home.html
+++ b/templates/Home.html
@@ -3,9 +3,11 @@
     <a class="navigate-right float-left">
       <img class="media-object pull-left" src={{prodottoimg}}>
       <div class="media-body">
-        <p>{{prodottonome}}</p>
-        <p>{{prodottodescr}}</p>
-        <p class="supermercato">{{supermercatonome}}</p>
+        <p class="nome">{{prodottonome}}</p>
+        <p class="descrizione">{{prodottodescrizione}}</p>
+        <p class="supermercato">
+            <img class="media-object pull-left" src={{supermercatoimg}}>
+        </p>
         <p class="prezzo">{{prodottoprezzo}}</p>
       </div>
     </a>
