--- a/templates/structure.html
+++ b/templates/structure.html
@@ -8,23 +8,23 @@
 </div>
 
 <nav class="bar bar-tab">
-  <a class="tab-item" href="#">
+  <a class="tab-item" id = "nav1" href="#">
     <span class="icon icon-home"></span>
     <span class="tab-label">Home</span>
   </a>
-  <a class="tab-item" href="#">
+  <a class="tab-item" id = "nav2" href="#">
     <span class="icon icon-star-filled"></span>
     <span class="tab-label">Spotlight</span>
   </a>
-  <a class="tab-item" href="#">
+  <a class="tab-item"id = "nav3" href="#">
     <span class="icon icon icon-list"></span>
     <span class="tab-label">Categorie</span>
   </a>
-  <a class="tab-item" href="#">
+  <a class="tab-item" id = "nav4" href="#">
     <span class="icon icon-pages"></span> 
     <span class="tab-label">Market</span>
   </a>
-  <a class="tab-item" href="#">
+  <a class="tab-item" id = "nav5" href="#">
     <span class="icon icon-search"></span>
     <span class="tab-label">Ricerca</span>
   </a>
