modifiche librerie e template

--- a/style/style.css
+++ b/style/style.css
@@ -97,6 +97,12 @@ body {
 .displayinline{
     display: inline;}
 
+.displaynone{
+    display: none;}
+
+.displayblock{
+    display: block;}
+
 /* END STRUCTURE */
 #map {
   height: 100%;
