--- a/style/style.css
+++ b/style/style.css
@@ -76,7 +76,8 @@ body {
     background-color: #FFFFFF; }
 
 .bar.bar-nav{
-    background-color: #FF4500;}
+    color: #FFFFFF;
+    background-color: #FF4500; }
 
 .nome{
     display: block;
