--- a/templates/ricerca.html
+++ b/templates/ricerca.html
@@ -1,7 +1,8 @@
-<form>
-  <input type="search" placeholder="Search">
-  <button class="btn btn-positive btn-inline">Cerca</button>
-</form>
+<div class="bar bar-standard bar-header-secondary">
+    <form>
+        <input type="search" placeholder="Ricerca Prodotti..."/>
+    </form>
+</div>
 
 <ul class="table-view">
   <li class="table-view-cell media">
