--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
       <img class="media-object pull-left" src={{prodottoimg}}>
       <div class="media-body">
         <p class="nome">{{prodottonome}}</p>
+        <p class="id displaynone">{{id}}</p>
         <div class="details-no">
             <span class="icon icon-down-nav">Dettagli</span>
             <div class="displaynone">
