--- a/templates/ricerca.html
+++ b/templates/ricerca.html
@@ -1,7 +1,8 @@
 <div class="bar bar-standard bar-header-secondary">
-    <form>
-        <input type="search" placeholder="Ricerca Prodotti..."/>
+    <form name="ricerca" action="Controller/CRicercaProdotto.class.php">
+        <input type="search" placeholder="Cerca Prodotti..."/>
     </form>
+    <button class="btn btn-negative btn-block displayinline">Cerca</button>
 </div>
 
 <ul class="table-view">
