--- a/templates/ricerca.html
+++ b/templates/ricerca.html
@@ -2,5 +2,5 @@
     <form name="ricerca" action="Controller/CRicercaProdotto.class.php">
         <input type="search" placeholder="Cerca Prodotti..."/>
     </form>
-    <button class="btn btn-negative btn-block displayinline">Cerca</button>
+    <button class="btn btn-negative btn-block displayinline" id="ricerca">Cerca</button>
 </div>
