siete delle capre! grazie a me e giovanni adesso funziona, peccato che a giovanni non parte cordova ahahahahahah

--- a/templates/structure.html
+++ b/templates/structure.html
@@ -1,6 +1,6 @@
 <body>
     <header class="bar bar-nav i-12">
-      <a class="icon icon-left-nav pull-left .displaynone"></a>
+      <a class="icon icon-left-nav pull-left displaynone"></a>
       <h1 class="title">{{title}}</h1>
     </header>
 
