--- a/templates/structure.html
+++ b/templates/structure.html
@@ -1,16 +1,16 @@
 <body>
     <header class="bar bar-nav i-12">
-      <a class="icon icon-left-nav pull-left displaynone"></a>
-      <h1 class="title">{{title}}</h1>
+      <a class="icon icon-left-nav pull-left displaynone" id ="back"></a>
+      <h1 class="title" id="title">ciao</h1>
     </header>
 
     <div id="content" class="content">
     </div>
 
     <nav class="bar bar-tab">
-      <a class="tab-item" id = "nav1" href="#">
-        <span class="icon icon-home"></span>
-        <span class="tab-label">Home</span>
+      <a class="tab-item active" id = "nav1" href="#">
+        <span class="icon icon-home active"></span>
+        <span class="tab-label active">Home</span>
       </a>
       <a class="tab-item" id = "nav2" href="#">
         <span class="icon icon-star-filled"></span>
@@ -30,4 +30,3 @@
       </a>
     </nav>
 </body>
-<!-- mettendo active alle classi diventano illuminate -->
