--- a/style/style.css
+++ b/style/style.css
@@ -35,9 +35,15 @@ body {
   top: 0;
   overflow: hidden; }
 
-.displaynone {
-  display: none; }
+.displayinline{
+    display: inline;}
 
+.displaynone{
+    display: none;}
+
+.displayblock{
+    display: block;}
+    
 .invisible {
   visibility: hidden; }
 
@@ -93,23 +99,15 @@ body {
 
 .btn{
     background-color: #FF4500;}
-
-.displayinline{
-    display: inline;}
-
-.displaynone{
-    display: none;}
-
-.displayblock{
-    display: block;}
     
     .title{
     color: #FFFFFF;
     text-transform: uppercase;
     text-align: left;
     font-weight: bold;
+    margin-top: 0.1em;
     margin-left: 0.5em;
-    font-size: 1.75em;
+    font-size: 1.85em;
     display: inline;}  
 
 /* END STRUCTURE */
