--- a/templates/structure.html
+++ b/templates/structure.html
@@ -1,13 +1,13 @@
 <body>
     <header class="bar bar-nav i-12">
       <a class="icon icon-left-nav pull-left displaynone" id ="back"></a>
-      <h1 class="title" id="title">ciao</h1>
+      <h1 class="title" id="title"></h1>
     </header>
 
     <div id="content" class="content">
     </div>
 
-    <nav class="bar bar-tab">
+    <nav class="bar bar-tab i-12">
       <a class="tab-item active" id = "nav1" href="#">
         <span class="icon icon-home active"></span>
         <span class="tab-label active">Home</span>
