modifiche... sono comparse le banane!

--- a/templates/prodotto.html
+++ b/templates/prodotto.html
@@ -1,18 +1,16 @@
- {{#each Id}}
-  <li class="table-view-cell media">
     <a class="navigate-right float-left">
-      <img class="media-object pull-left" src={{Immagine}}>
+      <img class="media-object pull-left" src="{{ Immagine }}">
       <div class="media-body">
-        <p class="nome">{{Nome}}</p>
-        <p class="id displaynone">{{Id}}</p>
+        <p class="nome">{{ Nome }}</p>
+        <p class="id displaynone">{{ Id }}</p>
         <div class="details-no">
             <span class="icon icon-down-nav">Dettagli</span>
             <div class="displaynone">
-                <p class="descrizione">{{Descrizione}}</p>
+                <p class="descrizione">{{ Descrizione }}</p>
                 <p class="supermercato">
-                    <img class="media-object pull-left" src={{Logo}}>
+                    <img class="media-object pull-left" src="{{ Logo }}">
                 </p>
-                <p class="prezzo">€ {{Prezzo}}</p>
+                <p class="prezzo">€ {{ Prezzo }}</p>
             </div>
         </div>
         <div class="unfollowed">
@@ -20,5 +18,3 @@
         </div>
       </div>
     </a>
-  </li>
-{{/each}}
