--- a/templates/prodotto.html
+++ b/templates/prodotto.html
@@ -1,20 +1,18 @@
-    <a class="navigate-right float-left">
       <img class="media-object pull-left" src="{{ Immagine }}">
       <div class="media-body">
         <p class="nome">{{ Nome }}</p>
         <p class="id displaynone">{{ Id }}</p>
-        <div class="details-no">
-            <span class="icon icon-down-nav">Dettagli</span>
+        <div class="no" id="dettagli">
+            <span class="icon icon-down-nav icon-dettagli">Dettagli</span>
             <div class="displaynone">
                 <p class="descrizione">{{ Descrizione }}</p>
                 <p class="supermercato">
-                    <img class="media-object pull-left" src="{{ Logo }}">
+                    <img class="media-object pull-left" src="{{ Logo }}../img/es_logo.png">
                 </p>
                 <p class="prezzo">€ {{ Prezzo }}</p>
             </div>
         </div>
-        <div class="unfollowed">
-            <span class="icon icon-star"></span>
+        <div class="unfollowed" id="tofollow">
+            <span class="icon icon-star icon-follow"></span>
         </div>
       </div>
-    </a>
