funziona il fetch fatto da silvia

--- a/templates/categoria.html
+++ b/templates/categoria.html
@@ -1,8 +1,8 @@
 <li class="table-view-cell media">
   <a class="navigate-right float-left">
-    <img class="media-object pull-left" src={{categoriaimg}}>
+    <img class="media-object pull-left" src="{{ categoriaimg }}">
     <div class="media-body">
-      <p class="displayinline">{{categorianome}}</p>
+      <p class="displayinline">{{ categorianome }}</p>
     </div>
   </a>
 </li>
