--- a/templates/prodotto.html
+++ b/templates/prodotto.html
@@ -1,7 +1,7 @@
       <img class="media-object pull-left" src="{{ Immagine }}">
       <div class="media-body">
         <p class="nome">{{ Nome }}</p>
-        <p class="id displaynone">{{ Id }}</p>
+        <p class="displaynone" id="id">{{ Id }}</p>
         <div class="no" id="dettagli">
             <span class="icon icon-down-nav icon-dettagli">Dettagli</span>
             <div class="displaynone">
@@ -12,7 +12,7 @@
                 <p class="prezzo">€ {{ Prezzo }}</p>
             </div>
         </div>
-        <div class="unfollowed" id="tofollow">
+        <div class="" id="tofollow">
             <span class="icon icon-star icon-follow"></span>
         </div>
       </div>
