--- a/templates/structure.html
+++ b/templates/structure.html
@@ -14,7 +14,7 @@
       </a>
       <a class="tab-item" id = "nav2" href="#">
         <span class="icon icon-star-filled"></span>
-        <span class="tab-label">Spotlight</span>
+        <span class="tab-label">Preferiti</span>
       </a>
       <a class="tab-item"id = "nav3" href="#">
         <span class="icon icon icon-list"></span>
