--- a/templates/market.html
+++ b/templates/market.html
@@ -1,16 +1,11 @@
-<ul class="table-view">
   <li class="table-view-cell media">
     <a class="navigate-right float-left">
-      <img class="media-object pull-left" src={{supermercatoimg}}>
+      <img class="media-object pull-left" src="{{ supermercatoimg }}">
       <div class="media-body">
           <p class="indirizzo">
-            <p>{{supermercatocitta}}</p>
-            <p>{{supermercatovia}}</p>
-            <p class="displayinline">{{supermercatovianc}}</p>
+            <p>{{ supermercatocitta }}</p>
+            <p>{{ supermercatovia }}</p>
+            <p class="displayinline">{{ supermercatovianc }}</p>
       </div>
     </a>
   </li>
-  
-  <!-- riempito iterativamente con gli altri risultati -->
-  
-</ul>
