--- a/templates/categoria.html
+++ b/templates/categoria.html
@@ -1,8 +1,6 @@
-<li class="table-view-cell media">
   <a class="navigate-right float-left">
-    <img class="media-object pull-left" src="{{ categoriaimg }}">
+    <img class="media-object pull-left" src="{{ Immagine }}">
     <div class="media-body">
-      <p class="displayinline">{{ categorianome }}</p>
+      <p class="displayinline" id="nome">{{ Nome }}</p>
     </div>
   </a>
-</li>
