--- a/templates/prodotto.html
+++ b/templates/prodotto.html
@@ -7,7 +7,7 @@
             <div class="displaynone">
                 <p class="descrizione">{{ Descrizione }}</p>
                 <p class="supermercato">
-                    <img class="media-object pull-left" src="{{ Logo }}../img/es_logo.png">
+                    <img class="media-object pull-left" src="{{ Supermercato.Logo }}">
                 </p>
                 <p class="prezzo">€ {{ Prezzo }}</p>
             </div>
