--- a/templates/structure.html
+++ b/templates/structure.html
@@ -14,7 +14,7 @@
       </a>
       <a class="tab-item" id = "nav2" href="#">
         <span class="icon icon-star-filled"></span>
-        <span class="tab-label">Preferiti</span>
+        <span class="tab-label">Spotlight</span>
       </a>
       <a class="tab-item"id = "nav3" href="#">
         <span class="icon icon icon-list"></span>
@@ -22,7 +22,7 @@
       </a>
       <a class="tab-item" id = "nav4" href="#">
         <span class="icon icon-pages"></span> 
-        <span class="tab-label">Market</span>
+        <span class="tab-label">Markets</span>
       </a>
       <a class="tab-item" id = "nav5" href="#">
         <span class="icon icon-search"></span>
