funziona home e spotlight, non visualizza ancora le immagini

--- a/templates/prodotto.html
+++ b/templates/prodotto.html
@@ -8,6 +8,7 @@
                 <p class="descrizione">{{ Descrizione }}</p>
                 <p class="supermercato">
                     <img class="media-object pull-left" src="{{ Supermercato.Logo }}">
+                    {{ Supermercato.Nome }}
                 </p>
                 <p class="prezzo">€ {{ Prezzo }}</p>
             </div>
