--- a/templates/prodotto.html
+++ b/templates/prodotto.html
@@ -1,4 +1,4 @@
-      <img class="media-object pull-left" src="{{ Immagine }} ">
+      <img class="media-object pull-left" id="imgProd" src="">
       <div class="media-body">
         <p class="nome">{{ Nome }}</p>
         <p class="displaynone" id="id">{{ Id }}</p>
@@ -7,7 +7,7 @@
             <div class="displaynone">
                 <p class="descrizione">{{ Descrizione }}</p>
                 <p class="supermercato">
-                    <img class="media-object pull-left" src="{{ Supermercato.Logo }}">
+                    <img class="media-object pull-left" id="imgProd" src="">
                     {{ Supermercato.Nome }}
                 </p>
                 <p class="prezzo">€ {{ Prezzo }}</p>
