funziona la view ricerca, c'è un piccolo bug nel ridimensionamento degli elementi della lista, sicuramente qualcosa di css

--- a/templates/structure.html
+++ b/templates/structure.html
@@ -8,23 +8,23 @@
     </div>
 
     <nav class="bar bar-tab i-12">
-      <a class="tab-item active" id = "nav1" href="#">
+      <a class="tab-item active" id = "nav1" href="/home">
         <span class="icon icon-home active"></span>
         <span class="tab-label active">Home</span>
       </a>
-      <a class="tab-item" id = "nav2" href="#">
+      <a class="tab-item" id = "nav2" href="/spotlight">
         <span class="icon icon-star-filled"></span>
         <span class="tab-label">Spotlight</span>
       </a>
-      <a class="tab-item"id = "nav3" href="#">
+      <a class="tab-item"id = "nav3" href="/categorie">
         <span class="icon icon icon-list"></span>
         <span class="tab-label">Categorie</span>
       </a>
-      <a class="tab-item" id = "nav4" href="#">
+      <a class="tab-item" id = "nav4" href="/markets">
         <span class="icon icon-pages"></span> 
         <span class="tab-label">Markets</span>
       </a>
-      <a class="tab-item" id = "nav5" href="#">
+      <a class="tab-item" id = "nav5" href="/ricerca">
         <span class="icon icon-search"></span>
         <span class="tab-label">Ricerca</span>
       </a>
