--- a/templates/ricerca.html
+++ b/templates/ricerca.html
@@ -1,4 +1,4 @@
-    <form name="ricerca" action="Controller/CRicercaProdotto.class.php">
-        <input type="search" placeholder="Cerca Prodotti..."/>
+ 	<form name="ricerca" action="Controller/CRicercaProdotto.class.php">
+        <input type="search" id="value" placeholder="Cerca Prodotti..."/>
     </form>
     <button class="btn btn-negative btn-block displayinline" id="ricerca">Cerca</button>
