modifiche varie al codice

--- a/templates/prodotto.html
+++ b/templates/prodotto.html
@@ -1,19 +1,19 @@
-      <img class="media-object pull-left" id="imgProd" src="">
-      <div class="media-body">
-        <p class="nome">{{ Nome }}</p>
-        <p class="displaynone" id="id">{{ Id }}</p>
-        <div class="no" id="dettagli">
-            <span class="icon icon-down-nav icon-dettagli">Dettagli</span>
-            <div class="displaynone">
-                <p class="descrizione">{{ Descrizione }}</p>
-                <p class="supermercato">
-                    <img class="media-object pull-left" id="imgProd" src="">
-                    {{ Supermercato.Nome }}
-                </p>
-                <p class="prezzo">€ {{ Prezzo }}</p>
-            </div>
-        </div>
-        <div class="" id="tofollow">
-            <span class="icon icon-star icon-follow"></span>
-        </div>
-      </div>
+<img class='media-object pull-left' id='imgProd' src=''>
+<div class='media-body'>
+	<p class='nome'>{{ Nome }}</p>
+  	<p class='displaynone' id='id'>{{ Id }}</p>
+  	<div class='no' id='dettagli'>
+    	<span class='icon icon-down-nav icon-dettagli'>Dettagli</span>
+      	<div class='displaynone'>
+     		<p class='descrizione'>{{ Descrizione }}</p>
+          	<p class='supermercato'>
+         		<img class='media-object pull-left' id='imgProd' src=''>
+             	{{ Supermercato.Nome }}
+          	</p>
+          	<p class='prezzo'>€ {{ Prezzo }}</p>
+      	</div>
+  	</div>
+  	<div class='' id='tofollow'>
+   		<span class='icon icon-star icon-follow'></span>
+  	</div>
+</div>
