--- a/style/style.css
+++ b/style/style.css
@@ -20,61 +20,61 @@ body {
 /* END STANDARD MOBILE */
 /* CUSTOM FONTS */
 @font-face {
-  font-family: 'Hattori';
-  src: url("../fonts/Hattori_Hanzo.otf") format("opentype"); }
+	font-family: 'Hattori';
+	src: url('../fonts/Hattori_Hanzo.otf') format('opentype'); }
 
 /* END CUSTOM FONTS */
 /* START STRUCTURE */
 #main {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  left: 0;
-  top: 0;
-  overflow: hidden; }
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	left: 0;
+	top: 0;
+	overflow: hidden; }
 
 .displayinline{
-    display: inline;}
+    display: inline; }
 
 .displaynone{
-    display: none;}
+    display: none; }
 
 .displayblock{
-    display: block;}
+	display: block; }
     
 .invisible {
-  visibility: hidden; }
+	visibility: hidden; }
 
 #content {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  overflow-y: scroll;
-  overflow-x: hidden; }
+	position: relative;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	overflow-y: scroll;
+	overflow-x: hidden; }
 
 .page {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  overflow-y: scroll;
-  overflow-x: hidden; }
+	position: relative;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	overflow-y: scroll;
+	overflow-x: hidden; }
 
 .scrollable {
-  -webkit-overflow-scrolling: touch; }
+ 	-webkit-overflow-scrolling: touch; }
 
 .not_scrollable {
-  -webkit-overflow-scrolling: auto; }
+ 	-webkit-overflow-scrolling: auto; }
 
 .tab-item, .icon, .tab-label {
-    color: #FFFFFF;
+	color: #FFFFFF;
     background-color: #FF4500; }
 
 .active {
@@ -85,11 +85,11 @@ body {
     background-color: #FF4500; }
     
  .table-view-cell .media{
-    float: left;}
+    float: left; }
 
 .nome{
     display: block;
-    text-transform: uppercase;}
+    text-transform: uppercase; }
 
 .icon-dettagli, .icon-follow{
 	font-size: 90%;
@@ -100,19 +100,19 @@ body {
     font-weight: 200;
     font-size: 80%;
     display: block;
-    text-align: center;}
+    text-align: center; }
 
 .prezzo{
 	text-size:110%;
 	font-weight: bold;
     display: block;
-    text-align: right}
+    text-align: right; }
 
 #tofollow{
-	text-align:right}
+	text-align:right; }
 
 .btn{
-    background-color: #FF4500;}
+    background-color: #FF4500; }
     
 .title{
     color: #FFFFFF;
@@ -122,10 +122,10 @@ body {
     margin-top: 0.1em;
     margin-left: 0.5em;
     font-size: 1.85em;
-    display: inline;}  
+    display: inline; }  
 
 
 /* END STRUCTURE */
 #map {
-  height: 100%;
-  width: 100%; }
+	height: 100%;
+	width: 100%; }
