--- a/templates/market.html
+++ b/templates/market.html
@@ -1,11 +1,12 @@
-  <li class="table-view-cell media">
-    <a class="navigate-right float-left">
-      <img class="media-object pull-left" src="{{ supermercatoimg }}">
-      <div class="media-body">
-          <p class="indirizzo">
-            <p>{{ supermercatocitta }}</p>
-            <p>{{ supermercatovia }}</p>
-            <p class="displayinline">{{ supermercatovianc }}</p>
-      </div>
-    </a>
-  </li>
+<li class='table-view-cell media'>
+	<a class='navigate-right float-left'>
+	  <img class='media-object pull-left' id='logo' src="{{ Logo }}">
+	</a>
+	<div class='media-body'>
+		<div class='indirizzo'>
+		    <p>{{ Indirizzo.Città }}</p>
+	      	<p>{{ Indirizzo.Via }}</p> 
+	      	<p class='displayinline'>{{ Indirizzo.NumeroCivico }}</p>
+      	</div>
+	</div>
+</li>
