--- a/templates/market.html
+++ b/templates/market.html
@@ -1,8 +1,9 @@
-<li class='table-view-cell media'>
+<li class='table-view-cell media' id='market'>
 	<a class='navigate-right float-left'>
-	  <img class='media-object pull-left' id='logo' src="{{ Logo }}">
+	  <img class='media-object pull-left' id='logo' src=''>
 	</a>
 	<div class='media-body'>
+	{{ Nome }}
 		<div class='indirizzo'>
 		    <p>{{ Indirizzo.Città }}</p>
 	      	<p>{{ Indirizzo.Via }}</p> 
