--- a/templates/prodotto.html
+++ b/templates/prodotto.html
@@ -7,7 +7,7 @@
       	<div class='displaynone'>
      		<p class='descrizione'>{{ Descrizione }}</p>
           	<p class='supermercato'>
-         		<img class='media-object pull-left' id='imgProd' src=''>
+         		<img class='media-object pull-left' id='imgSup' src=''>
              	{{ Supermercato.Nome }}
           	</p>
           	<p class='prezzo'>€ {{ Prezzo }}</p>
