--- a/templates/ricerca.html
+++ b/templates/ricerca.html
@@ -1,4 +1,2 @@
-<form name='ricerca' action=''>
-      <input type='search' id='value' placeholder='Cerca Prodotti...'/>
-</form>
+<input name='ricerca' type='search' id='value' placeholder='Cerca Prodotti...'/>
 <button class='btn btn-negative btn-block displayinline' id='ricerca'>Cerca</button>
