--- a/templates/categorie.html
+++ b/templates/categorie.html
@@ -1,117 +1,112 @@
-<ul id='tabellaCategorie' class='table-view'>
-    <li class='table-view-cell media' id= 'categoria'>
-        <a class='navigate-right float-left'>
-            <img class='media-object pull-left' src='../img/Loghi_Categorie/acqua.jpg'>
-            <div class='media-body'>
-              <p class='displayinline' id='nome'>Acqua</p>
-            </div>
-        </a>
-    </li>
-    <li class='table-view-cell media' id= 'categoria'>
-        <a class='navigate-right float-left'>
-            <img class='media-object pull-left' src='../img/Loghi_Categorie/bagno.jpg'>
-            <div class='media-body'>
-              <p class='displayinline' id='nome'>Bagno</p>
-            </div>
-        </a>
-    </li>
-    <li class='table-view-cell media' id= 'categoria'>
-        <a class='navigate-right float-left'>
-            <img class='media-object pull-left' src='../img/Loghi_Categorie/carne.jpg'>
-            <div class='media-body'>
-              <p class='displayinline' id='nome'>Carne</p>
-            </div>
-        </a>
-    </li>
-    <li class='table-view-cell media' id= 'categoria'>
-        <a class='navigate-right float-left'>
-            <img class='media-object pull-left' src='../img/Loghi_Categorie/cereali.jpg'>
-            <div class='media-body'>
-              <p class='displayinline' id='nome'>Cereali</p>
-            </div>
-        </a>
-    </li>
-    <li class='table-view-cell media' id= 'categoria'>
-        <a class='navigate-right float-left'>
-            <img class='media-object pull-left' src='../img/Loghi_Categorie/cioccolata.jpg'>
-            <div class='media-body'>
-              <p class='displayinline' id='nome'>Cioccolata</p>
-            </div>
-        </a>
-    </li>
-    <li class='table-view-cell media' id= 'categoria'>
-        <a class='navigate-right float-left'>
-            <img class='media-object pull-left' src='../img/Loghi_Categorie/condimenti.jpg'>
-            <div class='media-body'>
-              <p class='displayinline' id='nome'>Condimenti</p>
-            </div>
-        </a>
-    </li>
-    <li class='table-view-cell media' id= 'categoria'>
-        <a class='navigate-right float-left'>
-            <img class='media-object pull-left' src='../img/Loghi_Categorie/formaggi.jpg'>
-            <div class='media-body'>
-              <p class='displayinline' id='nome'>Formaggi</p>
-            </div>
-        </a>
-    </li>
-    <li class='table-view-cell media' id= 'categoria'>
-        <a class='navigate-right float-left'>
-            <img class='media-object pull-left' src='../img/Loghi_Categorie/frutta.jpg'>
-            <div class='media-body'>
-              <p class='displayinline' id='nome'>Frutta</p>
-            </div>
-        </a>
-    </li>
-    <li class='table-view-cell media' id= 'categoria'>
-        <a class='navigate-right float-left'>
-            <img class='media-object pull-left' src='../img/Loghi_Categorie/gelati.jpg'>
-            <div class='media-body'>
-              <p class='displayinline' id='nome'>Gelati</p>
-            </div>
-        </a>
-    </li>
-    <li class='table-view-cell media' id= 'categoria'>
-        <a class='navigate-right float-left'>
-            <img class='media-object pull-left' src='../img/Loghi_Categorie/ortaggi.jpg'>
-            <div class='media-body'>
-              <p class='displayinline' id='nome'>Ortaggi</p>
-            </div>
-        </a>
-    </li>
-    <li class='table-view-cell media' id= 'categoria'>
-        <a class='navigate-right float-left'>
-            <img class='media-object pull-left' src='../img/Loghi_Categorie/pasta.jpg'>
-            <div class='media-body'>
-              <p class='displayinline' id='nome'>Pasta</p>
-            </div>
-        </a>
-    </li>
-    <li class='table-view-cell media' id= 'categoria'>
-        <a class='navigate-right float-left'>
-            <img class='media-object pull-left' src='../img/Loghi_Categorie/patate.jpg'>
-            <div class='media-body'>
-              <p class='displayinline' id='nome'>Patate</p>
-            </div>
-        </a>
-    </li>
-    <li class='table-view-cell media' id= 'categoria'>
-        <a class='navigate-right float-left'>
-            <img class='media-object pull-left' src='../img/Loghi_Categorie/pesce.jpg'>
-            <div class='media-body'>
-              <p class='displayinline' id='nome'>Pesce</p>
-            </div>
-        </a>
-    </li>
-    <li class='table-view-cell media' id= 'categoria'>
-        <a class='navigate-right float-left'>
-            <img class='media-object pull-left' src='../img/Loghi_Categorie/vino.jpg'>
-            <div class='media-body'>
-              <p class='displayinline' id='nome'>Vino</p>
-            </div>
-        </a>
-    </li>
-</ul>
-
-
-
+<li class='table-view-cell media categoria'>
+	<a class='navigate-right float-left'>
+		<img class='media-object pull-left' src='../img/Loghi_Categorie/acqua.jpg'>
+	</a>
+	<div class='media-body'>
+		<p class='displayinline' id='nome'>Acqua</p>
+	</div>
+</li>
+<li class='table-view-cell media categoria'>
+	<a class='navigate-right float-left'>
+		<img class='media-object pull-left' src='../img/Loghi_Categorie/bagno.jpg'>
+	</a>
+	<div class='media-body'>
+		<p class='displayinline' id='nome'>Bagno</p>
+	</div>
+</li>
+<li class='table-view-cell media categoria'>
+	<a class='navigate-right float-left'>
+		<img class='media-object pull-left' src='../img/Loghi_Categorie/carne.jpg'>
+	</a>
+	<div class='media-body'>
+		<p class='displayinline' id='nome'>Carne</p>
+	</div>
+</li>
+<li class='table-view-cell media categoria'>
+	<a class='navigate-right float-left'>
+		<img class='media-object pull-left' src='../img/Loghi_Categorie/cereali.jpg'>
+	</a>
+	<div class='media-body'>
+		<p class='displayinline' id='nome'>Cereali</p>
+	</div>
+</li>
+<li class='table-view-cell media categoria'>
+	<a class='navigate-right float-left'>
+		<img class='media-object pull-left' src='../img/Loghi_Categorie/cioccolata.png'>
+	</a>
+	<div class='media-body'>
+		<p class='displayinline' id='nome'>Cioccolata</p>
+	</div>
+</li>
+<li class='table-view-cell media categoria'>
+	<a class='navigate-right float-left'>
+		<img class='media-object pull-left' src='../img/Loghi_Categorie/condimenti.jpg'>
+	</a>
+	<div class='media-body'>
+		<p class='displayinline' id='nome'>Condimenti</p>
+	</div>
+</li>
+<li class='table-view-cell media categoria'>
+	<a class='navigate-right float-left'>
+   		<img class='media-object pull-left' src='../img/Loghi_Categorie/formaggi.jpg'>
+	</a>
+	<div class='media-body'>
+		<p class='displayinline' id='nome'>Formaggi</p>
+	</div>
+</li>
+<li class='table-view-cell media categoria'>
+	<a class='navigate-right float-left'>
+		<img class='media-object pull-left' src='../img/Loghi_Categorie/frutta.jpg'>
+	</a>
+	<div class='media-body'>
+		<p class='displayinline' id='nome'>Frutta</p>
+	</div>
+</li>
+<li class='table-view-cell media categoria'>
+	<a class='navigate-right float-left'>
+		<img class='media-object pull-left' src='../img/Loghi_Categorie/gelati.jpg'>
+	</a>
+	<div class='media-body'>
+		<p class='displayinline' id='nome'>Gelati</p>
+	</div>
+</li>
+<li class='table-view-cell media categoria'>
+	<a class='navigate-right float-left'>
+		<img class='media-object pull-left' src='../img/Loghi_Categorie/ortaggi.jpg'>
+	</a>
+	<div class='media-body'>
+		<p class='displayinline' id='nome'>Ortaggi</p>
+	</div>
+</li>
+<li class='table-view-cell media categoria'>
+	<a class='navigate-right float-left'>
+		<img class='media-object pull-left' src='../img/Loghi_Categorie/pasta.jpg'>
+	</a>
+	<div class='media-body'>
+		<p class='displayinline' id='nome'>Pasta</p>
+	</div>
+</li>
+<li class='table-view-cell media categoria'>
+	<a class='navigate-right float-left'>
+		<img class='media-object pull-left' src='../img/Loghi_Categorie/patate.jpg'>
+	</a>
+	<div class='media-body'>
+		<p class='displayinline' id='nome'>Patate</p>
+	</div>
+</li>
+<li class='table-view-cell media categoria'>
+	<a class='navigate-right float-left'>
+		<img class='media-object pull-left' src='../img/Loghi_Categorie/pesce.jpg'>
+	</a>
+  	<div class='media-body'>
+  		<p class='displayinline' id='nome'>Pesce</p>
+	</div>
+</li>
+<li class='table-view-cell media categoria'>
+  	<a class='navigate-right float-left'>
+   		<img class='media-object pull-left' src='../img/Loghi_Categorie/vino.jpg'>
+  	</a>
+	<div class='media-body'>
+		<p class='displayinline' id='nome'>Vino</p>
+	</div>
+</li>
