--- a/templates/market.html
+++ b/templates/market.html
@@ -2,8 +2,9 @@
 	<a class='navigate-right float-left'>
 	  <img class='media-object pull-left' id='logo' src=''>
 	</a>
-	<div class='media-body'>
+	<div class='media-body' id='nome'>
 	{{ Nome }}
+	<div class='displaynone' id ='ids'>{{ Ids }}</div>
 		<div class='indirizzo'>
 		    <p>{{ Indirizzo.Città }}</p>
 	      	<p>{{ Indirizzo.Via }}</p> 
