funge ancora meglio!

--- a/templates/market.html
+++ b/templates/market.html
@@ -2,13 +2,13 @@
 	<a class='navigate-right float-left'>
 	  <img class='media-object pull-left' id='logo' src=''>
 	</a>
-	<div class='media-body' id='nome'>
-	{{ Nome }}
-	<div class='displaynone' id ='ids'>{{ Ids }}</div>
+	<div class='media-body'>
+		<div class='displaynone' id='nome'>{{ Nome }}</div>
+		<div class='displaynone' id ='ids'>{{ Ids }}</div>
 		<div class='indirizzo'>
 		    <p>{{ Indirizzo.Città }}</p>
 	      	<p>{{ Indirizzo.Via }}</p> 
 	      	<p class='displayinline'>{{ Indirizzo.NumeroCivico }}</p>
-      	</div>
+	     </div>
 	</div>
 </li>
