--- a/templates/prodotto.html
+++ b/templates/prodotto.html
@@ -8,8 +8,7 @@
      		<p class='descrizione'>{{ Descrizione }}</p>
           	<p class='supermercato'>
          		<img class='media-object pull-left' id='imgSup' src=''>
-             	{{ Supermercato.Nome }}
-          	</p>
+             	<div class='displaynone'>{{ Supermercato.Nome }}</div>
           	<p class='prezzo'>€ {{ Prezzo }}</p>
       	</div>
   	</div>
