--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,17 @@
 /* STANDARD FOR MOBILE */
-* {
+* 
+{
   /* transparent link and button selection */
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
+  }
+  
+ ::-webkit-scrollbar{
+ 	width: 10px;
+ 	background-color: #FFFFFF;}
+ 
+ ::-webkit-scrollbar-thumb{
+ 	border-radius: 10px;
+ 	background: #FF4500;}
 
 body {
   -webkit-touch-callout: none;
@@ -59,7 +69,9 @@ body {
 	top: 0;
 	bottom: 0;
 	overflow-y: scroll;
-	overflow-x: hidden; }
+	overflow-x: hidden; 
+	margin-top:0%;
+	margin-bottom: -50%;}
 
 .page {
 	position: relative;
@@ -76,6 +88,19 @@ body {
 
 .not_scrollable {
  	-webkit-overflow-scrolling: auto; }
+ 	
+#back{
+	height: 85%;}
+	
+.emptyResult{
+	position:absolute;
+	top:50%;
+	left:50%;
+	margin-top:-73px;
+	margin-left:-85px;
+	width:147px;
+	height:171px;
+	background: #3FA9F5;}
 
 .tab-item, .icon, .tab-label {
 	color: #FFFFFF;
@@ -88,8 +113,20 @@ body {
 .bar.bar-nav{
     background-color: #FF4500; }
     
- .table-view-cell .media{
-    float: left; }
+.table-view{
+	overflow: hidden;
+	border-color: transparent;}    
+
+.table-view-cell.media{
+	border-color: transparent;
+	display: block;}
+    
+#prodotto{
+	width: 280px;
+	/*height: 180px;*/
+	margin-left: 1%;
+    float: left;
+    display: inline;}
 
 .nome{
     display: block;
@@ -127,7 +164,14 @@ body {
     margin-left: 0.5em;
     font-size: 1.85em;
     display: inline; }  
-
+    
+#value{
+	width: 70%;}
+	
+#ricerca{
+	width: 20%;
+	display: inline;
+	float: right;}
 
 /* END STRUCTURE */
 #map {
