non ricordo cosa ho fatto ma qualcosa sono sicuro di averla fatta

--- a/templates/market.html
+++ b/templates/market.html
@@ -7,11 +7,11 @@
 		<div class='displaynone' id ='ids'>{{ Ids }}</div>
 		<div class='indirizzo'>
 		    <p id='città'>{{ Indirizzo.Città }}</p>
-	      	<p id='via'>{{ Indirizzo.Via }}</p> 
+	      	<p id='via'>{{ Indirizzo.Via }}</p>
 	      	<p class='displayinline'>{{ Indirizzo.NumeroCivico }}</p>
 	     </div>
 	</div>
 </div>
 <div>
-	  <span class='icon icon-info displayinline' id='mappa'></span>
+	  <img id='mappa' src='./img/maps.png'>
 </div>
