--- a/style/style.css
+++ b/style/style.css
@@ -165,6 +165,15 @@ body {
     font-size: 1.85em;
     display: inline; }  
     
+#offline{
+	width: 100%;
+	height: 100%;
+	text-allign: center;}
+	
+#offline > p{
+	font-size: 200%;
+	color: #FF4500;}
+    
 #value{
 	width: 70%;}
 	
@@ -172,6 +181,11 @@ body {
 	width: 20%;
 	display: inline;
 	float: right;}
+
+#tabella{
+	top:200px;
+}
+
 
 /* END STRUCTURE */
 #map {
