--- a/templates/market.html
+++ b/templates/market.html
@@ -12,6 +12,6 @@
 	     </div>
 	</div>
 </div>
-<div>
-	  <img id='mappa' src='./img/maps.png'>
+<div class= 'map descrizione'>Tappa
+	  <img id='mappa' src='./img/maps.png'>per la mappa
 </div>
