--- a/templates/prodotto.html
+++ b/templates/prodotto.html
@@ -1,4 +1,19 @@
-<a class='float-left'>
+<img class='' id='imgProd' src=''>
+<p class='nome'>{{ Nome }}</p>
+<p class='prezzo'>€ {{ Prezzo }}</p>
+<div class='' id='tofollow'>
+ 	<span class='icon icon-star icon-follow'></span>
+</div>
+<p id='tapdettagli'>Tieni premuto per i dettagli</p>
+<div class='testo' id='dettagli'>
+	<p class='displaynone' id='id'>{{ Id }}</p>
+    <p class='descrizione'>{{ Descrizione }}</p>
+    <p class='supermercato'>         	
+    	<img class='media-object pull-left' id='imgSup' src=''>
+   		<div class='displaynone'>{{ Supermercato.Nome }}</div>
+</div>
+
+<!-- <a class='float-left'>
 	<img class='media-object pull-left' id='imgProd' src='{{ Immagine.ImmagineHtml }}'>
 </a>
 <div class='media-body'>
@@ -20,3 +35,4 @@
       	</div>
   	</div>
 </div>
+ -->
