--- a/style/style.css
+++ b/style/style.css
@@ -28,8 +28,8 @@ body {
   width: 100%; }
   
   img {
-  width: auto;
-  max-width: 40%}
+  width: 70%;
+  max-width: 70%}
 
 /* END STANDARD MOBILE */
 /* CUSTOM FONTS */
@@ -70,8 +70,7 @@ body {
 	bottom: 0;
 	overflow-y: scroll;
 	overflow-x: hidden; 
-	margin-top:0%;
-	margin-bottom: -50%;}
+	;}
 
 .page {
 	position: relative;
@@ -146,10 +145,10 @@ body {
     text-align: center; }
 
 .prezzo{
-	text-size:110%;
+	font-size:150%;
 	font-weight: bold;
     display: block;
-    text-align: right; 
+    text-align: left; 
     margin-right: 5%; }
 
 #tofollow{
@@ -195,11 +194,11 @@ body {
 	text-color: #FFFFFF;
 	border: 4px solid #F09010;
 	width: 45%;
-	height: 47%;
+	height: 270px;
 	float: left;
 	position: relative;
 	border-radius: 10px;
-	margin-left: 7px;
+	margin-left: 4px;
 	margin-top: 10px;}
 	
 .testo {
@@ -235,13 +234,16 @@ body {
   	
 #prodotto > img {
   	width:6em;
- 	height: auto;
+ 	height: 7em;
  	border-radius: 15px;}
 
 .supermercato > #imgSup{
   	width:6em;
-  	height: 2em;}
+  	height: 3em;}
 
+.prezzo > #tapdettagli{
+	font-size: 50%;
+display: inline-block;}
 @media screen and (max-width:1280px)and (min-width: 500px){
 
 #prodotto{
@@ -286,11 +288,11 @@ body {
 	clear:both;}
 
 #prodotto > img {
-	width:11em;
+	width:13em;
 	height:12em;}
 
   .supermercato > #imgSup{
-	width:13em;
+	width:14em;
 	height: 11em;}
 
 .descrizione{
