messi url localhost e sistemata una cosa per l'icona delle mappe

--- a/templates/market.html
+++ b/templates/market.html
@@ -7,8 +7,7 @@
 		<div class='displaynone' id ='ids'>{{ Ids }}</div>
 		<div class='indirizzo'>
 		    <p id='città'>{{ Indirizzo.Città }}</p>
-	      	<p id='via'>{{ Indirizzo.Via }}</p>
-	      	<p class='displayinline'>{{ Indirizzo.NumeroCivico }}</p>
+	      	<p id='via'>{{ Indirizzo.Via }} {{ Indirizzo.NumeroCivico }}</p>
 	     </div>
 	</div>
 </div>
