--- a/templates/structure.html
+++ b/templates/structure.html
@@ -4,7 +4,17 @@
 		<h1 class='title' id='title'></h1>
 	</header>
 
-	<div id='content' class='content'></div>
+	<div id='content' class='content'>
+		<div class='displaynone' id='boxloader'>
+			<table>
+				<tr>
+					<td valign='middle' align='center'>
+						<img id='loader' src='./img/loader.gif'>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
 
 	<nav class='bar bar-tab i-12'>
 		<a class='tab-item active' id='nav1' href='#home'>
