grafica sistemata da silvia

--- a/templates/prodotto.html
+++ b/templates/prodotto.html
@@ -1,5 +1,5 @@
-<div id="imm" align='center'>
-	<img class='' id='imgProd' src=''>
+<div id="imm"' >
+	<img class='' id='imgProd' src=''  align="center">
 </div>
 <p class='nome'>{{ Nome }}
 	<div class='' id='tofollow'>
