--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,3 @@
-/* STANDARD FOR MOBILE */
 * 
 {
   /* transparent link and button selection */
@@ -223,7 +222,10 @@ body {
   	width:7.7em;
   	height:6em;
   	clear:both;}
+  	
+  	
 /*AGGIUNTE--------------------------------*/
+
 #imm{
 	width:100%;
 	height: 50%
@@ -243,37 +245,61 @@ body {
 	font-size: 50%;
     display: inline-block;}
 
+
+
+
+
+
+
+
 @media screen and (max-width:1280px)and (min-width: 500px){
 
 #prodotto{
 	border: 4px solid #F09010;
 	padding-left: 100px;
 	width:45%; 
-	height: 45%;
+	height: 270px;
 	position: relative;
 	float: left;
 	border-radius: 15px;
 	margin-left: 30px;
 	margin-top:20px;}
+	  	
+#prodotto > #dettagli {
+  	color:#FFFFFF;
+  	width:7.7em;
+  	height:6em;
+  	clear:both;}
 
   .testo {
 	color:#FF4500;
 	background-color: #FFFFFF;
 	width: 3000px;
-	height: 1500px;
+	height: 300px;
 	padding-left: 110px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	position: absolute;
 	top: -30px;
-	right: 3000px;
+	right: 2700px;
 	opacity: 4;
 	-webkit-transition: all 0.5s ease-in-out;
 	-moz-transition: all 0.5s ease-in-out;
 	-o-transition: all 0.5s ease-in-out;
 	transition: all 0.5s ease-in-out;
 	border-radius: 15px;}
+	
+	/*AGGIUNTE*/
+	#imm{
+	width:100%;
+	height: 50%
+}
+
+#imm > img {
+  	width:8em;
+ 	height: 7em;
+ 	border-radius: 15px;}
 
 #prodotto:hover .testo {
 	opacity: 0.9; 
@@ -282,17 +308,26 @@ body {
 	
 #prodotto > #dettagli {
 	color:#FFFFFF;
-	width:19em;
-	height:16em;
+	width:18em;
+	height:13em;
 	clear:both;}
 
 #prodotto > img {
-	width:13em;
-	height:12em;}
+	width:11em;
+	height:15em;}
 
   .supermercato > #imgSup{
-	width:14em;
-	height: 11em;}
+	width:11em;
+	height: 9em;}
+	
+	
+.prezzo{
+	font-size:200%;
+	font-weight: bold;
+    display: block;
+    text-align: left; 
+    margin-right: 5%; }
+
 
 .descrizione{
     font-color:#FFFFFF;
@@ -301,7 +336,36 @@ body {
     text-align: center;
     clear: none; 
     width: 100%;}
+    
+    #supermercato{
+	width: 100%;
+	height: 100%;}
+	
+#supermercato > .float-left >#logo{
+	width: 11em;
+	height: 7em;}
+	
+	.descrizione > #mappa {
+	height: 7%;
+	width: 7%; 
+	}
+	
+	#supermercato > .media-body > .indirizzo {
+	float: left;
+	margin-top: 45px;
+	font-size: 50%;
+	}
+	
 }
+
+
+
+
+
+
+
+
+
 
 /* CATEGORIE */
 
@@ -353,3 +417,4 @@ body {
 #mappa {
 	height: 10%;
 	width: 10%; }
+
