--- a/style/style.css
+++ b/style/style.css
@@ -63,13 +63,14 @@ body {
 #content {
 	position: relative;
 	width: 100%;
-	height: 100%;
+	height: 90%;
 	left: 0;
 	top: 0;
 	bottom: 0;
 	overflow-y: scroll;
 	overflow-x: hidden; 
-	;}
+	margin-top:1.5%;
+	margin-bottom: -50%;}
 
 .page {
 	position: relative;
